# chromium-sync-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/specs/: history-tool-improvements.md
.github/workflows/: ci.yml  release.yml
src/chromium_sync/: local.py  passphrase_setup.py  server.py
