[project]
name = "chromium-sync-mcp"
version = "0.2.0"
description = "MCP server for accessing Chromium browser data (tabs, history, bookmarks) from Brave, Chrome, and Chromium"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "Jai Dhyani", email = "jai@dhyani.net" },
    { name = "Claude Opus 4.5", email = "noreply@anthropic.com" },
]
keywords = [
    "mcp",
    "claude",
    "browser",
    "sync",
    "tabs",
    "history",
    "bookmarks",
    "chrome",
    "brave",
    "chromium",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp>=1.0.0",
    "plyvel>=1.5.1",
]

[project.urls]
Homepage = "https://github.com/jaidhyani/chromium-sync-mcp"
Repository = "https://github.com/jaidhyani/chromium-sync-mcp"
Issues = "https://github.com/jaidhyani/chromium-sync-mcp/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.8.0",
    "pyright>=1.1.0",
]

[project.scripts]
chromium-sync-mcp = "chromium_sync.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chromium_sync"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
